--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="../Shared/base.css">
-    <link rel="stylesheet" href="../Shared/Topbar/topbar.css">
-    <link rel="stylesheet" href="../Shared/Darkmode/darkmode.css">
+    <link rel="stylesheet" href="../Shared/topbar.css">
+    <link rel="stylesheet" href="../Shared/darkmode.css">
     <link rel="stylesheet" href="Dashboard.css">
 
     <style>
@@ -18,11 +18,11 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../Shared/Darkmode/darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
     
     <!-- Top navigation bar -->
     <div id="topbar"></div>
-    <script src="../Shared/Topbar/topbar.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
 
     <main class="container">
         <section class="hero">
