--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -16,10 +16,10 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../Shared/Darkmode/darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
     
     <div id="topbar"></div>
-    <script src="../Shared/Topbar/topbar.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
     
     <!-- HERO -->
     <section class="hero">
