--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -14,11 +14,11 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../Shared/Darkmode/darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
-    <script src="../Shared/Topbar/topbar.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
 
     <!-- HERO -->
     <section class="hero">
